# detrudr

./: .editorconfig  .env.sample  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  bacon.toml  config.yaml  package.json
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
src/: baseline.rs  blocker.rs  config.rs  engine.rs  main.rs  monitor.rs  notifier.rs
src/dashboard/: dashboard.rs
src/dashboard/pages/: auth.html  index.html
