[package]
name = "detrudr"
version = "0.1.0"
edition = "2021"
description = "HTTP traffic anomaly and DDoS counter engine"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3"
